fix z-index of settings and feedback buttons

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,6 +32,7 @@ a {
     display: block;
     line-height: 50px;
     cursor: pointer;
+    z-index: 3;
 
     &:hover {
         background: lighten($primaryColor, 10%);
@@ -53,7 +54,8 @@ a {
     background: $primaryColor;
     padding: 0 15px;
     text-transform: uppercase;
-
+    z-index: 3;
+    
     &:hover {
         background: lighten($primaryColor, 10%);
     }
